syntax = "proto3";

option java_multiple_files = true;
package auth;
option java_outer_classname = "AuthProto";

service AuthService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
